force-app/main/default/objects/CodeQualityReport__c/CodeQualityReport__c.object-meta.xml
<CustomObject>
    <description>Code quality report of checks performed on a SFDX project</description>
    <label>Code Quality Report</label>
    <nameField>
        <displayFormat>CQR-{00000}</displayFormat>
        <label>Code Quality Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Quality Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>