force-app/main/default/objects/CodeQualityReport__c/fields/GitBranch__c.field-meta.xml
<CustomField>
    <fullName>GitBranch__c</fullName>
    <label>Git Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>