force-app/main/default/objects/CodeQualityReport__c/fields/JobURL__c.field-meta.xml
<CustomField>
    <fullName>JobURL__c</fullName>
    <label>Job URL</label>
    <type>Url</type>
</CustomField>