force-app/main/default/objects/CodeQualityReport__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <label>Org Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>