force-app/main/default/objects/CodeQualityReport__c/fields/OrgLabel__c.field-meta.xml
<CustomField>
    <fullName>OrgLabel__c</fullName>
    <label>Org Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>