force-app/main/default/objects/CodeQualityReport__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Origin of the code quality report</description>
    <inlineHelpText>Origin of the code quality report</inlineHelpText>
    <label>Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mega-Linter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>