force-app/main/default/objects/CodeQualityReport__c/fields/RunDateTime__c.field-meta.xml
<CustomField>
    <fullName>RunDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time the quality check has been performed</description>
    <label>Run Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>