force-app/main/default/objects/CodeQualityReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RunDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>OrgLabel__c</columns>
    <columns>GitBranch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>